--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,8 @@
 API_URL="http://localhost:3000/api"
 API_KEY="your_api_key_here"
 API_APPID="your_app_id_here"
+VITE_TMDB_API_URL="https://api.themoviedb.org/3"
+# The Movie Database API Key
+TMDB_API_KEY="your_tmdb_api_key_here"
 VITE_POSTER_BASE_URL="https://wsrv.nl/?url=https://image.tmdb.org/t/p/w500"
+VITE_BACKDROP_BASE_URL="https://wsrv.nl/?url=https://image.tmdb.org/t/p/w780"
