--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^8.0.1",
     "@types/node": "^25.0.9",
     "@varlet/ui": "^3.13.0",
+    "fast-average-color": "^9.5.0",
     "vue": "^3.5.24",
     "vue-router": "4"
   },
